# IR2134-Robots-Cooperatius

./: .gitignore  README.md
First Project/: README.md
First Project/src/project/project_assets/: CMakeLists.txt
First Project/src/project/project_config/: package.xml
First Project/src/project/project_config/config/estce/: cleaner_fleet_config.yaml  delivery_fleet_config.yaml  patrol_fleet_config.yaml
First Project/src/project/project_config/config/icc_kyoto/: tinyRobot_config.yaml
First Project/src/project/project_config/config/test1/: tinyRobot_config.yaml
First Project/src/project/project_config/launch/: estce.launch.xml  icc_kyoto.launch.xml  test1.launch.xml
First Project/src/project/project_fleet_adapter/: CHANGELOG.rst  setup.py
First Project/src/project/project_fleet_adapter/launch/: fleet_adapter.launch.xml
First Project/src/project/project_maps/: CMakeLists.txt
First Project/src/project/project_simulation/: package.xml
Large Project/: README.md  download_fuel_models.sh  fix_lift.py  setup_fuel_symlinks.sh
Large Project/src/project/: README.md
Large Project/src/project/project_assets/: CHANGELOG.rst  package.xml
Large Project/src/project/project_config/: CMakeLists.txt
Large Project/src/project/project_fleet_adapter/: README.md  package.xml
Large Project/src/project/project_maps/: package.xml
Large Project/src/project/project_simulation/: CMakeLists.txt
Traffic Editor/: README.md  icc_kyoto.building.yaml  icc_kyoto.world
Traffic Editor/models/: AdjTable  OfficeChairGrey
(+44 files in other folders)
