<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_config</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pau@todo.todo">pau</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>project_maps</exec_depend>
  <exec_depend>project_assets</exec_depend>
  <exec_depend>project_fleet_adapter</exec_depend>

  <exec_depend>rmf_traffic_ros2</exec_depend>
  <exec_depend>rmf_task_ros2</exec_depend>
  <exec_depend>rmf_fleet_adapter</exec_depend>
  <exec_depend>rmf_building_map_tools</exec_depend>
  <exec_depend>rmf_visualization</exec_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch_xml</exec_depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
